# testing

./: .gitignore  README.md
argp/: main.c
badircli/: irc notes  main.c  main.h  note
bash/cronFixer/: check.bash  check.ts
bash/pathing/: pathing.bash
bash/wgetstatus/: status.sh
bashrecur/: recur.bash
bitmasking/: main.c
bitshift/: main.c
c-unity-build/: shared.c
c/badircli/: irc.c  irc.h
c/bitmasking/: main.c
c/c-unity-build/: Makefile  main.c
c/circdep/: Makefile  a.c  b.c  (+4 more)
cleanup_reg/: main.c
cronFixer/: README
daemon/: main.c
dirname-reimp/: Makefile
dynamicprogramming/: fib.py
enums/: main.c
expanding_buffer/: main.c
fakepypi_test/: pyproject.toml
firebase_test/: pubspec.yaml
gorand/: go.mod
heapimp/: heap.c  heap.h  main.c
hunch/: main.c  main.py
ifs/: main.c
leftshift/: main.c
memalign/: main.c
modulo/: main.c
morethreads/: main.c
multithreaded_bfs/: pom.xml
nfree/: main.c
nullterm/: main.c
passthrough/: main.c
pointer-arithmetic-test/: main.c
pointervreference/: main.c
pointerweirdness/: main.c
polling and interrupts/: readout.c
protoc-testing/: Makefile  repeated-in.c
racecond_test/: Makefile  dll.c  main.c  monitor.c  monitor.h  shared.c  shared.h
rangemod/: main.py
realloc/: Makefile
serialization/: writer.c
signature_forcing/: main.h
sockets/: Makefile  client.c
strdup_test/: Makefile
stringformatter/: main.c
threaded_printf/: main.c
unionofstructs/: main.c
weird-shebang/: test2.c
weirdcasts/: main.c
wgetstatus/: Makefile
xmacros/: main.c
zises/: main.c
(+121 files in other folders)
